<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamentoTextoInicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamentoValorCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamentoTextoInicial" />

    <TextView
        android:id="@+id/pagamentoValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/pagamentoValorCompra"
        app:layout_constraintTop_toBottomOf="@id/pagamentoValorCompra"
        tools:text="R$ 421,99" />

    <EditText
        android:id="@+id/pagamentoNumeroCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamentoValor" />

    <EditText
        android:id="@+id/pagamentoMesVencimento"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamentoCVC"
        app:layout_constraintStart_toStartOf="@id/pagamentoNumeroCartao" />

    <EditText
        android:id="@+id/pagamentoAnoVencimento"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamentoCVC"
        app:layout_constraintStart_toEndOf="@id/pagamentoMesVencimento" />

    <EditText
        android:id="@+id/pagamentoCVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc_pagamento"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/pagamentoNumeroCartao"
        app:layout_constraintTop_toBottomOf="@id/pagamentoNumeroCartao" />

    <EditText
        android:id="@+id/pagamentoNomeCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/nome_no_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/pagamentoCVC"
        app:layout_constraintStart_toStartOf="@id/pagamentoMesVencimento"
        app:layout_constraintTop_toBottomOf="@id/pagamentoCVC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pagamentoBotaoFinalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamentoNomeCartao"
        app:layout_constraintStart_toStartOf="@id/pagamentoNomeCartao"
        app:layout_constraintTop_toBottomOf="@id/pagamentoNomeCartao" />

</androidx.constraintlayout.widget.ConstraintLayout>