<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/banner_inicial_dos_pacotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/primeiro_roxo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/txtEspeciais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="679dp"
        android:text="@string/especiais"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBanner"
        app:layout_constraintEnd_toEndOf="@id/imgBanner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/imgBanner"
        app:layout_constraintTop_toTopOf="@id/imgBanner" />

    <TextView
        android:id="@+id/txtPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/txt_pais"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txtEspeciais"
        app:layout_constraintTop_toBottomOf="@+id/txtEspeciais" />

    <ListView
        android:id="@+id/listaPacoteListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBanner"
        tools:listitem="@layout/item_pacote" />

</androidx.constraintlayout.widget.ConstraintLayout>